ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc4, 4.7.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Service arch 2020-05-04
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Scheduling tasks on InlineCountingExecutor is not thread-safe, thus concurrent scheduling of tasks results in undefined behavior (and could potentially cause segmentation faults).

      We should make sure that instances of InlineCountingExecutor are not shared between multiple threads (see example here).

            Assignee:
            Amirsaman Memaripour
            Reporter:
            Amirsaman Memaripour
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: