SERVER-47760 Avoid concurrent accesses to InlineCountingExecutor

(cherry picked from commit 2b2ca9bdea156620c93066560f14a81395332c5f)